Add Readme.md and Emscripten.html

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ IF (WIN32)
 	find_package(SDL2IMAGE REQUIRED)
 ELSEIF(EMSCRIPTEN)
 	set(SDL2_INCLUDE_DIRS "${EMSCRIPTEN_ROOT_PATH}/system/include" "${EMSCRIPTEN_ROOT_PATH}/system/include/SDL2/")
-	set(CMAKE_CXX_FLAGS "-s USE_SDL=2 -s USE_SDL_IMAGE=2 -s SDL2_IMAGE_FORMATS='[\"png\"]' --preload-file tiles.png --preload-file map.txt")
+	set(CMAKE_CXX_FLAGS "-s USE_SDL=2 -s USE_SDL_IMAGE=2 -s SDL2_IMAGE_FORMATS='[\"png\"]' --preload-file tiles.png --preload-file map.txt --shell-file ../emscripten.html")
 	set(CMAKE_EXECUTABLE_SUFFIX ".html")
 ELSE()
 	find_package(PkgConfig REQUIRED)
